dump/src/reader/compat/snapshots/dump__reader__compat__v1_to_v2__test__compat_v1_v2-7.snap
---
source: dump/src/reader/compat/v1_to_v2.rs
expression: movies.settings().unwrap()
---
{
  "displayedAttributes": [
    "*"
  ],
  "searchableAttributes": [
    "*"
  ],
  "filterableAttributes": [
    "genres",
    "id"
  ],
  "rankingRules": [
    "typo",
    "words",
    "proximity",
    "attribute",
    "exactness",
    "asc(release_date)"
  ],
  "stopWords": [],
  "synonyms": {},
  "distinctAttribute": null
}
